--- a/timeLog.qmd
+++ b/timeLog.qmd
@@ -5,18 +5,27 @@ date: today
 always_allow_html: true
 format: 
   confluence-html:
+    self-contained: true
     page-layout: full
-    css: two_columns.css
-params:
+params: # Change to fit your query
   config_file: config.yaml #.dist
-  users: ["Eva Freyhult", "Louella Vasquez", "Marcin Kierczak", "Markus Mayrhofer", "Miguel Angel Redondo", "Paul Pyl", "Sebastian DiLorenzo", "Yuan Li" ]
-  start_date: 2023-09-01
-  end_date: 2024-08-31
+  users: [ "John Doe", "Jane Doe" ]
+  start_date: 2024-09-01
+  end_date: 2025-08-31
+execute:
+  freeze: false
 ---
 
 ```{r setup, include=FALSE}
 library(knitr)
+library(reticulate)
 knitr::opts_chunk$set(echo = FALSE)
+
+myenvs=conda_list()
+
+envname=myenvs$name[1]
+use_condaenv(envname, required = TRUE)
+
 ```
 
 ```{r correspond}
@@ -26,10 +35,10 @@ corr = data.frame(
     "Absence (Vacation/VAB/Other)",                         # Absence
     "Administration",                                       # Administration
     "Internal NBIS",                                        # Internal NBIS
-    "NBIS Management",                                      # Coordination
+    c("NBIS Management", "Management"),                     # Coordination
     c("Development", "Internal consultation", "Outreach"),  # Community
     "Professional Development",                             # Professional development
-    c("Consultation", "Support"),                           # Support
+    c("Consultation", "Support", "Internal consultation"),  # Support
     "Training"                                              # Training
   )), 
   row.names=c(
@@ -92,7 +101,7 @@ The PercentExp denotes percent of approximate expected yearly work time, here th
 
 (kudos to Henrik)
 
-<div class=pgbr></div>
+<div class=pgbr>
 
 ```{python, echo=FALSE, eval=TRUE}
 
@@ -110,24 +119,21 @@ with open(r.params['config_file'], 'r') as config_file:
 # Open Redamine API
 redmine = Redmine_server_api(config)
 
-# Use dummy projects from Redmine to # Set up user db indexed by user id
+# Use dummy projects from Redmine to set up user db indexed by user id
 project_name = 'Long-term Support'
 project_id = redmine.find_project_id_from_name(project_name)
 userNameToId = redmine.create_user_name_to_id(project_id)
 
 allTimeLog = {}
 allTimeLogIssue = {}
-for user in r.params["users"]: #["Eva Freyhult", "Louella Vasquez", "Marcin Kierczak", "Markus Mayrhofer", "Paul Pyl", "Sebastian DiLorenzo", "Yuan Li" ]:
+for user in r.params["users"]: 
   user_id = userNameToId[user]
   userTimeLog =  pd.DataFrame.from_dict(redmine.report_time_entries_by_activity_and_month(user_id, r.params["start_date"], r.params["end_date"]), orient='index')
-  #userTimeLog = pd.DataFrame.from_dict(userTimeLog, orient='index')
   ordCols = sorted(userTimeLog.columns)
   userTimeLog["Activity"] = userTimeLog.index
   allTimeLog[user] =  userTimeLog[["Activity"]+ordCols]
   
   userIssueTimeLog =  pd.DataFrame.from_dict(redmine.report_time_entries_by_issue(user_id, r.params["start_date"], r.params["end_date"]), orient='index')
-  #userTimeLog = pd.DataFrame.from_dict(userTimeLog, orient='index')
-  #userIssueTimeLog = userIssueTimeLog.sort_values(by=['Total time', ascending = False)
   allTimeLogIssue[user] =  userIssueTimeLog.sort_values(by=['Project', 'Tracker', 'Total time'], ascending = False)
   
 ```
@@ -137,8 +143,8 @@ library(reticulate)
 library(knitr)
 library(kableExtra)
 
-for(key in params$users){ #c("Eva Freyhult", "Louella Vasquez", "Marcin Kierczak", "Markus Mayrhofer", "Paul Pyl", "Sebastian DiLorenzo", "Yuan Li" )){
-  cat("## Summary of time logging for the period 230901 -- 240331\n")
+for(key in params$users){ 
+  cat(paste0("\n## Summary of time logging for the period ",params$start_date," -- ", params$end_date,"\n"))
   cat(paste("##", key, "\n"))
   raw = data.frame(py$allTimeLog[key], stringsAsFactors=TRUE, check.names = FALSE)
   names(raw) = sapply(names(raw), function(x) sub(paste0(key, "."), "", x))
@@ -147,65 +153,65 @@ for(key in params$users){ #c("Eva Freyhult", "Louella Vasquez", "Marcin Kierczak
   for(i in row.names(corr)){
     ret = rbind(ret, data.frame("Activity"= i, "Time" = sum(raw[raw$Activity %in% unlist(corr[i,"redmine"]), "Total time"])))
   }
-  
   # Presence/absence
-  cat('<div class="twoC">')
+  cat('<div class="columns">\n')
   curr = ret[ret$Activity == "Absence", ]
   curr = rbind(curr, data.frame(Activity = "Presence", "Time" = sum(ret[ret$Activity %in% presence, "Time"])))
   curr$Percent = round(curr$Time/sum(curr$Time) * 100, 2)
   curr$PercentExp = round(curr$Time/approxJobHours * 100, 2)
+  cat('<div class="column" width="70%">\n')
   pie(curr$Time, labels=curr$Activity, main=paste("Absence/presence pie chart for", key))
+  cat('</div>\n')
   curr = rbind(curr, data.frame(Activity= "Total", Time = sum(curr$Time), Percent = sum(curr$Percent), PercentExp = sum(curr$PercentExp)))
+  cat('<div class="column" width="30%">\n')
   print(kable(curr,  row.names = FALSE, "html") %>% 
           kable_styling("condensed", full_width=F))
-  cat('</div>')
-  cat('<div class="clearer"></div>')
-  
+  cat('</div>\n')
+
   # Presence
-  cat('<div class="twoC">')
   curr = ret[ret$Activity %in% presence, ]
   curr$Percent = round(curr$Time/sum(curr$Time) * 100, 2)
+  cat('<div class="column" width="70%">\n')
   pie(curr$Time, labels=curr$Activity, main=paste("Presence Time pie chart for", key))
+  cat('</div>\n')
   curr = rbind(curr, data.frame(Activity= "Total", Time = sum(curr$Time), Percent = sum(curr$Percent)))
+  cat('<div class="column" width="30%">\n')
   print(kable(curr, row.names = FALSE, "html") %>% 
           kable_styling("condensed", full_width=F))
-  cat('</div>')
-  cat('<div class="clearer"></div>')
+  cat('</div>\n')
 
   # output
-  cat('<div class="twoC">')
   curr = ret[!ret$Activity %in% c(output, "Absence"),]
   curr=rbind(curr, data.frame(Activity="Output", Time = sum(ret[ret$Activity %in% output, "Time"])))
   curr$Percent = round(curr$Time/sum(curr$Time) * 100, 2)
+  cat('<div class="column" width="70%">\n')
   pie(curr$Time, labels=curr$Activity, main=paste("Output pie chart for", key))
+  cat('</div>\n')
   curr = rbind(curr, data.frame(Activity= "Total", Time = sum(curr$Time), Percent = sum(curr$Percent)))
+  cat('<div class="column" width="30%">\n')
   print(kable(curr, row.names = FALSE, "html") %>% 
           kable_styling("condensed", full_width=F))
-  cat('</div>')
-  cat('<div class="clearer"></div>')    
+  cat('</div>\n')
+  cat('</div>\n')
 
   # Full Time Log distributed over months  
-  cat(paste("Full Time Log distributed over activities and months for", key))
+  cat(paste("### Full Time Log distributed over activities and months for", key,"\n"))
   print(kable(raw, row.names = FALSE, "html") %>% 
           kable_styling("condensed", font_size = 10, full_width=F))
-  cat('</div>')
-  cat('<div class="clearer"></div>')    
 
   # Full Time Log distributed over issues
   raw = data.frame(py$allTimeLogIssue[key], stringsAsFactors=TRUE, check.names = FALSE)
   names(raw) = sapply(names(raw), function(x) sub(paste0(key, "."), "", x))
-  cat(paste("Full Time Log distributed over issues for", key))
+  cat(paste("### Full Time Log distributed over issues for", key,"\n"))
   print(kable(raw, row.names = TRUE, "html") %>% 
           kable_styling("condensed", font_size = 10, full_width=F))
 
-  cat('<div class="pgbr"></div>')
-  cat('<div class="clearer"></div>')    
   # Warn about activities not in the current correspondence table
   for(i in unique(raw$Activity)){
     if(!i %in% redmine){
       print(paste0("New activity, ", i, ", found; please include in variable 'corr'\n"))
     }
   }
-
 }
 ```
+</div>
