--- a/createLtsTable.qmd
+++ b/createLtsTable.qmd
@@ -6,8 +6,10 @@ always_allow_html: true
 format: 
   confluence-html:
     page-layout: full
+    standalone: true
 params:
   config_file: config.yaml #.dist
+  
 ---
 
 # Introduction
@@ -33,8 +35,14 @@ If you have any comments or suggestion (e.g., add an additional field), please p
         a. Remind the person, or
         b. Go to Redmine and add the person as Coordinator manually
 
+```{python, echo=FALSE, eval=FALSE}
+import platform
+import sys
+f=open("mystderrcommand.txt",'w')
+f.write(platform.python_version())
+print(platform.python_version())
+```
 ```{python, echo=FALSE, eval=TRUE}
-
 from Redmine_apis import *
 import pandas as pd
 import yaml
@@ -62,7 +70,7 @@ issues = redmine.get_all_project_issues(project_id)
 statuses = [ 'New', 'Pending', 'In Progress' ] 
 
 # Requested fields from Redmine -- NB! NBIS custom fields are given separately, but processed in the same way
-fields = [ 'id', 'status', 'project', 'assigned_to' ] 
+fields = [ 'id', 'status', 'project', 'All assignees' ] 
 custom_fields = [ 'Team', 'WABI ID', 'Coordinator']
 
 # Create and fill data frame with requested data
@@ -74,6 +82,11 @@ for i in [ l for l in issues if get_field(l, 'status') in statuses ]:
     val = get_field(i, f)
     if f == 'Coordinator':
       val = userIdToName[val]
+    elif f == 'All assignees':
+      if val == []:
+        val = ''
+      else:
+        val = ", ".join([  userIdToName[a] for a in val ])
     elif f == 'id':
       val = f"[{val}](https://projects.nbis.se/issues/{val})"
     dat[f].append(val)
